index.html done

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "jquery-validation": "git+https://github.com/jquery-validation/jquery-validation#^1.17.0",
     "owl.carousel": "git+https://github.com/OwlCarousel2/OwlCarousel2#^2.2.1",
     "font-awesome": "^4.7.0",
-    "inputmask": "git+https://github.com/RobinHerbots/Inputmask#^3.3.10"
+    "inputmask": "git+https://github.com/RobinHerbots/Inputmask#^3.3.10",
+    "css-hamburgers": "git+https://github.com/jonsuh/hamburgers#^0.9.1"
   },
   "devDependencies": {
     "jquery-validation": "git+https://github.com/jquery-validation/jquery-validation#^1.17.0",
